Versão atualizada do FutResults

--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -22,8 +22,8 @@
 				FutResults
 			</a>
 
-			<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-				<ul class="navbar-nav mr-auto">
+			<div>
+				<ul class="navbar-nav">
 					<li class="nav-item dropdown">
 						<a
 							class="nav-link dropdown-toggle"
@@ -37,130 +37,366 @@
 							Times
 						</a>
 						<div class="container">
-							<div class="dropdown-menu row" aria-labelledby="navbarDropdown">
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Flamengo.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Fluminense.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Botafogo.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Vasco.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/atletico mineiro.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Corinthians.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Cruzeiro.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Santos.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Sao Paulo.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Athletico.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Avai.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Bahia.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Ceara.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Chapecoense.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img src="/FutResults/Imagens/csa.png" width="30" height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Goias.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/gremio.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Internacional.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Palmeiras.png"
-										width="30"
-										height="35"
-								/></a>
-								<a class="col-3" href="#"
-									><img
-										src="/FutResults/Imagens/Fortaleza.png"
-										width="30"
-										height="35"
-								/></a>
+							<div class="dropdown-menu">
+								<table class="table">
+									<tbody>
+										<tr>
+											<td>
+												<a href="/FutResults/Flamengo.html"
+													><img
+														src="/FutResults/Imagens/Flamengo.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Fluminense.html"
+													><img
+														src="/FutResults/Imagens/Fluminense.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Vasco.html"
+													><img
+														src="/FutResults/Imagens/Vasco.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Botafogo.html"
+													><img
+														src="/FutResults/Imagens/Botafogo.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<a href="/FutResults/Santos.html"
+													><img
+														src="/FutResults/Imagens/Santos.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/SaoPaulo.html"
+													><img
+														src="/FutResults/Imagens/Sao Paulo.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Corinthians.html"
+													><img
+														src="/FutResults/Imagens/Corinthians.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Palmeiras.html"
+													><img
+														src="/FutResults/Imagens/Palmeiras.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<a href="/FutResults/Gremio.html"
+													><img
+														src="/FutResults/Imagens/gremio.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Internacional.html"
+													><img
+														src="/FutResults/Imagens/Internacional.png"
+														width="35"
+														height="35"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Cruzeiro.html"
+													><img
+														src="/FutResults/Imagens/Cruzeiro.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Atletico-MG.html"
+													><img
+														src="/FutResults/Imagens/atletico mineiro.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<a href="/FutResults/CSA.html"
+													><img
+														src="/FutResults/Imagens/csa.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Goias.html"
+													><img
+														src="/FutResults/Imagens/Goias.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Athletico-PR.html"
+													><img
+														src="/FutResults/Imagens/Athletico.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Avai.html"
+													><img
+														src="/FutResults/Imagens/Avai.png"
+														width="25"
+														height="30"
+												/></a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<a href="/FutResults/Bahia.html"
+													><img
+														src="/FutResults/Imagens/Bahia.png"
+														width="30"
+														height="35"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Ceara.html"
+													><img
+														src="/FutResults/Imagens/Ceara.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Fortaleza.html"
+													><img
+														src="/FutResults/Imagens/Fortaleza.png"
+														width="30"
+														height="30"
+												/></a>
+											</td>
+											<td>
+												<a href="/FutResults/Chapecoense.html"
+													><img
+														src="/FutResults/Imagens/Chapecoense.png"
+														width="30"
+														height="35"
+												/></a>
+											</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 						</div>
 					</li>
 				</ul>
 			</div>
 		</nav>
+
+		<div class="container">
+				<main>
+						<table class="table table-hover">
+							<thead>
+								<tr>
+									<th scope="col">Classificação</th>
+									<th scope="col">Time</th>
+									<th scope="col">Pontos</th>
+									<th scope="col">Jogos</th>
+									<th scope="col">Vitórias</th>
+									<th scope="col">Saldo de gol</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<th scope="row">1</th>
+									<td>Flamengo</td>
+									<th scope="row">87</th>
+									<td>36</td>
+									<td>27</td>
+									<td>48</td>
+								</tr>
+								<tr>
+									<th scope="row">2</th>
+									<td>Santos</td>
+									<th scope="row">71</th>
+									<td>36</td>
+									<td>21</td>
+									<td>24</td>
+								</tr>
+								<tr>
+									<th scope="row">3</th>
+									<td>Palmeiras</td>
+									<th scope="row">68</th>
+									<td>36</td>
+									<td>19</td>
+									<td>23</td>
+								</tr>
+								<tr>
+									<th scope="row">4</th>
+									<td>Grêmio</td>
+									<th scope="row">62</th>
+									<td>36</td>
+									<td>18</td>
+									<td>24</td>
+								</tr>
+								<tr>
+									<th scope="row">5</th>
+									<td>Athletico-PR</td>
+									<th scope="row">60</th>
+									<td>36</td>
+									<td>17</td>
+									<td>18</td>
+								</tr>
+								<tr>
+									<th scope="row">6</th>
+									<td>São Paulo</td>
+									<th scope="row">57</th>
+									<td>36</td>
+									<td>15</td>
+									<td>7</td>
+								</tr>
+								<tr>
+									<th scope="row">7</th>
+									<td>Internacional</td>
+									<th scope="row">54</th>
+									<td>36</td>
+									<td>15</td>
+									<td>5</td>
+								</tr>
+								<tr>
+									<th scope="row">8</th>
+									<td>Corinthians</td>
+									<th scope="row">53</th>
+									<td>36</td>
+									<td>13</td>
+									<td>8</td>
+								</tr>
+								<tr>
+									<th scope="row">9</th>
+									<td>Fortaleza</td>
+									<th scope="row">49</th>
+									<td>36</td>
+									<td>14</td>
+									<td>0</td>
+								</tr>
+								<tr>
+									<th scope="row">10</th>
+									<td>Goiás</td>
+									<th scope="row">49</th>
+									<td>36</td>
+									<td>14</td>
+									<td>-15</td>
+								</tr>
+								<tr>
+									<th scope="row">11</th>
+									<td>Bahia</td>
+									<th scope="row">48</th>
+									<td>36</td>
+									<td>12</td>
+									<td>2</td>
+								</tr>
+								<tr>
+									<th scope="row">12</th>
+									<td>Vasco</td>
+									<th scope="row">47</th>
+									<td>36</td>
+									<td>12</td>
+									<td>-6</td>
+								</tr>
+								<tr>
+									<th scope="row">13</th>
+									<td>Atlético-MG</td>
+									<th scope="row">45</th>
+									<td>36</td>
+									<td>12</td>
+									<td>-5</td>
+								</tr>
+								<tr>
+									<th scope="row">14</th>
+									<td>Botafogo</td>
+									<th scope="row">42</th>
+									<td>36</td>
+									<td>13</td>
+									<td>-12</td>
+								</tr>
+								<tr>
+									<th scope="row">15</th>
+									<td>Fluminense</td>
+									<th scope="row">42</th>
+									<td>36</td>
+									<td>11</td>
+									<td>-9</td>
+								</tr>
+								<tr>
+									<th scope="row">16</th>
+									<td>Ceará</td>
+									<th scope="row">38</th>
+									<td>36</td>
+									<td>10</td>
+									<td>-4</td>
+								</tr>
+								<tr>
+									<th scope="row">17</th>
+									<td>Cruzeiro</td>
+									<th scope="row">36</th>
+									<td>36</td>
+									<td>7</td>
+									<td>-15</td>
+								</tr>
+								<tr>
+									<th scope="row">18</th>
+									<td>CSA</td>
+									<th scope="row">32</th>
+									<td>36</td>
+									<td>8</td>
+									<td>-30</td>
+								</tr>
+								<tr>
+									<th scope="row">19</th>
+									<td>Chapecoense</td>
+									<th scope="row">28</th>
+									<td>36</td>
+									<td>6</td>
+									<td>-24</td>
+								</tr>
+								<tr>
+									<th scope="row">20</th>
+									<td>Avaí</td>
+									<th scope="row">19</th>
+									<td>36</td>
+									<td>3</td>
+									<td>-39</td>
+								</tr>
+							</tbody>
+						</table>
+					</main>
+		</div>
 
 		<script
 			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -177,5 +413,5 @@
 			integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 			crossorigin="anonymous"
 		></script>
-	</body>
+	</div>
 </html>
