Versão 2.0 do FutResults

--- a/Bahia.html
+++ b/Bahia.html
@@ -11,15 +11,15 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="/FutResults/Inicial.css" />
+		<link rel="stylesheet" href="/Inicial.css" />
 	</head>
 	<body>
 		<nav
 			class="navbar navbar-light navbar-expand-lg"
 			style="background-color:rgb(12, 12, 192)"
 		>
-			<a class="navbar-brand" href="/FutResults/PaginaInicial.html">
-				<img src="/FutResults/Imagens/bola.png" width="50" height="50" />
+			<a class="navbar-brand" href="/index.html">
+				<img src="/Imagens/bola.png" width="50" height="50" />
 				FutResults
 			</a>
 		</nav>
@@ -30,23 +30,23 @@
 				<br />
 				<div>
 					<abbr title="Goiás">GOI</abbr>
-					<img src="/FutResults/Imagens/Goias.png" width="30" />
+					<img src="/Imagens/Goias.png" width="30" />
 					<p class="time">&emsp;4&emsp;X&emsp;3&emsp;</p>
-					<img src="/FutResults/Imagens/Bahia.png" width="30" />
+					<img src="/Imagens/Bahia.png" width="30" />
 					<abbr title="Bahia">BAH</abbr><br />
 				</div>
 				<div>
 					<abbr title="Bahia">BAH</abbr>
-					<img src="/FutResults/Imagens/Bahia.png" width="30" />
+					<img src="/Imagens/Bahia.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/atletico mineiro.png" width="30" />
+					<img src="/Imagens/atletico mineiro.png" width="30" />
 					<abbr title="Atlético-MG">CAM</abbr><br />
 				</div>
 				<div>
 					<abbr title="CSA">CSA</abbr>
-					<img src="/FutResults/Imagens/csa.png" width="30" />
+					<img src="/Imagens/csa.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;2&emsp;</p>
-					<img src="/FutResults/Imagens/Bahia.png" width="30" />
+					<img src="/Imagens/Bahia.png" width="30" />
 					<abbr title="Bahia">BAH</abbr><br />
 				</div>
 			</div>
@@ -56,16 +56,16 @@
 				<br />
 				<div>
 					<abbr title="Bahia">BAH</abbr>
-					<img src="/FutResults/Imagens/Bahia.png" width="30" />
+					<img src="/Imagens/Bahia.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Vasco.png" width="30" />
+					<img src="/Imagens/Vasco.png" width="30" />
 					<abbr title="Vasco">VAS</abbr><br />
 				</div>
 				<div>
 					<abbr title="Fortaleza">FOR</abbr>
-					<img src="/FutResults/Imagens/Fortaleza.png" width="30" />
+					<img src="/Imagens/Fortaleza.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Bahia.png" width="30" />
+					<img src="/Imagens/Bahia.png" width="30" />
 					<abbr title="Bahia">BAH</abbr><br />
 				</div>
 			</div>
