--- a/Ceara.html
+++ b/Ceara.html
@@ -11,15 +11,15 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="/FutResults/Inicial.css" />
+		<link rel="stylesheet" href="/Inicial.css" />
 	</head>
 	<body>
 		<nav
 			class="navbar navbar-dark navbar-expand-lg"
 			style="background-color:black"
 		>
-			<a class="navbar-brand" href="/FutResults/PaginaInicial.html">
-				<img src="/FutResults/Imagens/bola.png" width="50" height="50" />
+			<a class="navbar-brand" href="/index.html">
+				<img src="/Imagens/bola.png" width="50" height="50" />
 				FutResults
 			</a>
 		</nav>
@@ -30,23 +30,23 @@
 				<br />
 				<div>
 					<abbr title="Ceará">CEA</abbr>
-					<img src="/FutResults/Imagens/Ceara.png" width="30" />
+					<img src="/Imagens/Ceara.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/Sao Paulo.png" width="30" />
+					<img src="/Imagens/Sao Paulo.png" width="30" />
 					<abbr title="São Paulo">SAO</abbr><br />
 				</div>
 				<div>
 					<abbr title="Flamengo">FLA</abbr>
-					<img src="/FutResults/Imagens/Flamengo.png" width="30" />
+					<img src="/Imagens/Flamengo.png" width="30" />
 					<p class="time">&emsp;4&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/Ceara.png" width="30" />
+					<img src="/Imagens/Ceara.png" width="30" />
 					<abbr title="Ceará">CEA</abbr><br />
 				</div>
 				<div>
 					<abbr title="Ceará">CEA</abbr>
-					<img src="/FutResults/Imagens/Ceara.png" width="30" />
+					<img src="/Imagens/Ceara.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/Athletico.png" width="30" />
+					<img src="/Imagens/Athletico.png" width="30" />
 					<abbr title="Athletico-PR">CAP</abbr><br />
 				</div>
 			</div>
@@ -56,16 +56,16 @@
 				<br />
 				<div>
 					<abbr title="Ceará">CEA</abbr>
-					<img src="/FutResults/Imagens/Ceara.png" width="30" />
+					<img src="/Imagens/Ceara.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Corinthians.png" width="30" />
+					<img src="/Imagens/Corinthians.png" width="30" />
 					<abbr title="Corinthians">COR</abbr><br />
 				</div>
 				<div>
 					<abbr title="Botafogo">BOT</abbr>
-					<img src="/FutResults/Imagens/Botafogo.png" width="30" />
+					<img src="/Imagens/Botafogo.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Ceara.png" width="30" />
+					<img src="/Imagens/Ceara.png" width="30" />
 					<abbr title="Ceará">CEA</abbr><br />
 				</div>
 			</div>
