--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			class="navbar navbar-light navbar-expand-lg"
 			style="background-color:rgb(9, 158, 9)"
 		>
-			<a class="navbar-brand" href="#">
-				<img src="/FutResults/Imagens/bola.png" width="50" height="50" />
+			<a class="navbar-brand" href="/index.html">
+				<img src="/Imagens/bola.png" width="50" height="50" />
 				FutResults
 			</a>
 
@@ -42,33 +42,33 @@
 									<tbody>
 										<tr>
 											<td>
-												<a href="/FutResults/Flamengo.html"
+												<a href="/Flamengo.html"
 													><img
-														src="/FutResults/Imagens/Flamengo.png"
+														src="/Imagens/Flamengo.png"
 														width="25"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Fluminense.html"
+												<a href="/Fluminense.html"
 													><img
-														src="/FutResults/Imagens/Fluminense.png"
+														src="/Imagens/Fluminense.png"
 														width="25"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Vasco.html"
+												<a href="/Vasco.html"
 													><img
-														src="/FutResults/Imagens/Vasco.png"
+														src="/Imagens/Vasco.png"
 														width="25"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Botafogo.html"
+												<a href="/Botafogo.html"
 													><img
-														src="/FutResults/Imagens/Botafogo.png"
+														src="/Imagens/Botafogo.png"
 														width="25"
 														height="30"
 												/></a>
@@ -76,33 +76,33 @@
 										</tr>
 										<tr>
 											<td>
-												<a href="/FutResults/Santos.html"
+												<a href="/Santos.html"
 													><img
-														src="/FutResults/Imagens/Santos.png"
+														src="/Imagens/Santos.png"
 														width="30"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/SaoPaulo.html"
+												<a href="/SaoPaulo.html"
 													><img
-														src="/FutResults/Imagens/Sao Paulo.png"
+														src="/Imagens/Sao Paulo.png"
 														width="30"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Corinthians.html"
+												<a href="/Corinthians.html"
 													><img
-														src="/FutResults/Imagens/Corinthians.png"
+														src="/Imagens/Corinthians.png"
 														width="25"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Palmeiras.html"
+												<a href="/Palmeiras.html"
 													><img
-														src="/FutResults/Imagens/Palmeiras.png"
+														src="/Imagens/Palmeiras.png"
 														width="30"
 														height="30"
 												/></a>
@@ -110,33 +110,33 @@
 										</tr>
 										<tr>
 											<td>
-												<a href="/FutResults/Gremio.html"
+												<a href="/Gremio.html"
 													><img
-														src="/FutResults/Imagens/gremio.png"
+														src="/Imagens/gremio.png"
 														width="30"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Internacional.html"
+												<a href="/Internacional.html"
 													><img
-														src="/FutResults/Imagens/Internacional.png"
+														src="/Imagens/Internacional.png"
 														width="35"
 														height="35"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Cruzeiro.html"
+												<a href="/Cruzeiro.html"
 													><img
-														src="/FutResults/Imagens/Cruzeiro.png"
+														src="/Imagens/Cruzeiro.png"
 														width="30"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Atletico-MG.html"
+												<a href="/Atletico-MG.html"
 													><img
-														src="/FutResults/Imagens/atletico mineiro.png"
+														src="/Imagens/atletico mineiro.png"
 														width="25"
 														height="30"
 												/></a>
@@ -144,33 +144,33 @@
 										</tr>
 										<tr>
 											<td>
-												<a href="/FutResults/CSA.html"
+												<a href="/CSA.html"
 													><img
-														src="/FutResults/Imagens/csa.png"
+														src="/Imagens/csa.png"
 														width="25"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Goias.html"
+												<a href="/Goias.html"
 													><img
-														src="/FutResults/Imagens/Goias.png"
+														src="/Imagens/Goias.png"
 														width="30"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Athletico-PR.html"
+												<a href="/Athletico-PR.html"
 													><img
-														src="/FutResults/Imagens/Athletico.png"
+														src="/Imagens/Athletico.png"
 														width="25"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Avai.html"
+												<a href="/Avai.html"
 													><img
-														src="/FutResults/Imagens/Avai.png"
+														src="/Imagens/Avai.png"
 														width="25"
 														height="30"
 												/></a>
@@ -178,33 +178,33 @@
 										</tr>
 										<tr>
 											<td>
-												<a href="/FutResults/Bahia.html"
+												<a href="/Bahia.html"
 													><img
-														src="/FutResults/Imagens/Bahia.png"
+														src="/Imagens/Bahia.png"
 														width="30"
 														height="35"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Ceara.html"
+												<a href="/Ceara.html"
 													><img
-														src="/FutResults/Imagens/Ceara.png"
+														src="/Imagens/Ceara.png"
 														width="30"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Fortaleza.html"
+												<a href="/Fortaleza.html"
 													><img
-														src="/FutResults/Imagens/Fortaleza.png"
+														src="/Imagens/Fortaleza.png"
 														width="30"
 														height="30"
 												/></a>
 											</td>
 											<td>
-												<a href="/FutResults/Chapecoense.html"
+												<a href="/Chapecoense.html"
 													><img
-														src="/FutResults/Imagens/Chapecoense.png"
+														src="/Imagens/Chapecoense.png"
 														width="30"
 														height="35"
 												/></a>
