--- a/CSA.html
+++ b/CSA.html
@@ -11,15 +11,15 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="/FutResults/Inicial.css" />
+		<link rel="stylesheet" href="/Inicial.css" />
 	</head>
 	<body>
 		<nav
 			class="navbar navbar-light navbar-expand-lg"
 			style="background-color:rgb(80, 15, 231)"
 		>
-			<a class="navbar-brand" href="/FutResults/PaginaInicial.html">
-				<img src="/FutResults/Imagens/bola.png" width="50" height="50" />
+			<a class="navbar-brand" href="/index.html">
+				<img src="/Imagens/bola.png" width="50" height="50" />
 				FutResults
 			</a>
 		</nav>
@@ -30,23 +30,23 @@
 				<br />
 				<div>
 					<abbr title="CSA">CSA</abbr>
-					<img src="/FutResults/Imagens/csa.png" width="30" />
+					<img src="/Imagens/csa.png" width="30" />
 					<p class="time">&emsp;0&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/Fluminense.png" width="30" />
+					<img src="/Imagens/Fluminense.png" width="30" />
 					<abbr title="Fluminense">FLU</abbr><br />
 				</div>
 				<div>
 					<abbr title="Cruzeiro">CRU</abbr>
-					<img src="/FutResults/Imagens/Cruzeiro.png" width="30" />
+					<img src="/Imagens/Cruzeiro.png" width="30" />
 					<p class="time">&emsp;0&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/csa.png" width="30" />
+					<img src="/Imagens/csa.png" width="30" />
 					<abbr title="CSA">CSA</abbr><br />
 				</div>
 				<div>
 					<abbr title="CSA">CSA</abbr>
-					<img src="/FutResults/Imagens/csa.png" width="30" />
+					<img src="/Imagens/csa.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;2&emsp;</p>
-					<img src="/FutResults/Imagens/Bahia.png" width="30" />
+					<img src="/Imagens/Bahia.png" width="30" />
 					<abbr title="Bahia">BAH</abbr><br />
 				</div>
 			</div>
@@ -56,16 +56,16 @@
 				<br />
 				<div>
 					<abbr title="Chapecoense">CHA</abbr>
-					<img src="/FutResults/Imagens/Chapecoense.png" width="30" />
+					<img src="/Imagens/Chapecoense.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/csa.png" width="30" />
+					<img src="/Imagens/csa.png" width="30" />
 					<abbr title="CSA">CSA</abbr><br />
 				</div>
 				<div>
 					<abbr title="CSA">CSA</abbr>
-					<img src="/FutResults/Imagens/csa.png" width="30" />
+					<img src="/Imagens/csa.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Sao Paulo.png" width="30" />
+					<img src="/Imagens/Sao Paulo.png" width="30" />
 					<abbr title="São Paulo">SAO</abbr><br />
 				</div>
 			</div>
