--- a/Flamengo.html
+++ b/Flamengo.html
@@ -11,15 +11,15 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="/FutResults/Inicial.css" />
+		<link rel="stylesheet" href="/Inicial.css" />
 	</head>
 	<body>
 		<nav
 			class="navbar navbar-light navbar-expand-lg"
 			style="background-color:rgb(206, 8, 8)"
 		>
-			<a class="navbar-brand" href="/FutResults/PaginaInicial.html">
-				<img src="/FutResults/Imagens/bola.png" width="50" height="50" />
+			<a class="navbar-brand" href="/index.html">
+				<img src="/Imagens/bola.png" width="50" height="50" />
 				FutResults
 			</a>
 		</nav>
@@ -30,23 +30,23 @@
 				<br />
 				<div>
 					<abbr title="Flamengo">FLA</abbr>
-					<img src="/FutResults/Imagens/Flamengo.png" width="30" />
+					<img src="/Imagens/Flamengo.png" width="30" />
 					<p class="time">&emsp;4&emsp;X&emsp;4&emsp;</p>
-					<img src="/FutResults/Imagens/Vasco.png" width="30" />
+					<img src="/Imagens/Vasco.png" width="30" />
 					<abbr title="Vasco">VAS</abbr><br />
 				</div>
 				<div>
 					<abbr title="Flamengo">FLA</abbr>
-					<img src="/FutResults/Imagens/Flamengo.png" width="30" />
+					<img src="/Imagens/Flamengo.png" width="30" />
 					<p class="time">&emsp;4&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/Ceara.png" width="30" />
+					<img src="/Imagens/Ceara.png" width="30" />
 					<abbr title="Ceará">CEA</abbr><br />
 				</div>
 				<div>
 					<abbr title="Palmeiras">PAL</abbr>
-					<img src="/FutResults/Imagens/Palmeiras.png" width="30" />
+					<img src="/Imagens/Palmeiras.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;3&emsp;</p>
-					<img src="/FutResults/Imagens/Flamengo.png" width="30" />
+					<img src="/Imagens/Flamengo.png" width="30" />
 					<abbr title="Flamengo">FLA</abbr><br />
 				</div>
 			</div>
@@ -56,16 +56,16 @@
 				<br />
 				<div>
 					<abbr title="Flamengo">FLA</abbr>
-					<img src="/FutResults/Imagens/Flamengo.png" width="30" />
+					<img src="/Imagens/Flamengo.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Avai.png" width="30" />
+					<img src="/Imagens/Avai.png" width="30" />
 					<abbr title="Avaí">AVA</abbr><br />
 				</div>
 				<div>
 					<abbr title="Santos">SAN</abbr>
-					<img src="/FutResults/Imagens/Santos.png" width="30" />
+					<img src="/Imagens/Santos.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Flamengo.png" width="30" />
+					<img src="/Imagens/Flamengo.png" width="30" />
 					<abbr title="Flamengo">FLA</abbr><br />
 				</div>
 			</div>
