--- a/Goias.html
+++ b/Goias.html
@@ -11,15 +11,15 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="/FutResults/Inicial.css" />
+		<link rel="stylesheet" href="/Inicial.css" />
 	</head>
 	<body>
 		<nav
 			class="navbar navbar-light navbar-expand-lg"
 			style="background-color:rgb(8, 105, 8)"
 		>
-			<a class="navbar-brand" href="/FutResults/PaginaInicial.html">
-				<img src="/FutResults/Imagens/bola.png" width="50" height="50" />
+			<a class="navbar-brand" href="/index.html">
+				<img src="/Imagens/bola.png" width="50" height="50" />
 				FutResults
 			</a>
 		</nav>
@@ -30,23 +30,23 @@
 				<br />
 				<div>
 					<abbr title="Goiás">GOI</abbr>
-					<img src="/FutResults/Imagens/Goias.png" width="30" />
+					<img src="/Imagens/Goias.png" width="30" />
 					<p class="time">&emsp;4&emsp;X&emsp;3&emsp;</p>
-					<img src="/FutResults/Imagens/Bahia.png" width="30" />
+					<img src="/Imagens/Bahia.png" width="30" />
 					<abbr title="Bahia">BAH</abbr><br />
 				</div>
 				<div>
 					<abbr title="Internacional">INT</abbr>
-					<img src="/FutResults/Imagens/Internacional.png" width="30" />
+					<img src="/Imagens/Internacional.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;2&emsp;</p>
-					<img src="/FutResults/Imagens/Goias.png" width="30" />
+					<img src="/Imagens/Goias.png" width="30" />
 					<abbr title="Goiás">GOI</abbr><br />
 				</div>
 				<div>
 					<abbr title="Goiás">GOI</abbr>
-					<img src="/FutResults/Imagens/Goias.png" width="30" />
+					<img src="/Imagens/Goias.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;2&emsp;</p>
-					<img src="/FutResults/Imagens/Fortaleza.png" width="30" />
+					<img src="/Imagens/Fortaleza.png" width="30" />
 					<abbr title="Fortaleza">FOR</abbr><br />
 				</div>
 			</div>
@@ -56,16 +56,16 @@
 				<br />
 				<div>
 					<abbr title="Palmeiras">PAL</abbr>
-					<img src="/FutResults/Imagens/Palmeiras.png" width="30" />
+					<img src="/Imagens/Palmeiras.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Goias.png" width="30" />
+					<img src="/Imagens/Goias.png" width="30" />
 					<abbr title="Goiás">GOI</abbr><br />
 				</div>
 				<div>
 					<abbr title="Goiás">GOI</abbr>
-					<img src="/FutResults/Imagens/Goias.png" width="30" />
+					<img src="/Imagens/Goias.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/gremio.png" width="30" />
+					<img src="/Imagens/gremio.png" width="30" />
 					<abbr title="Grêmio">GRE</abbr><br />
 				</div>
 			</div>
