--- a/SaoPaulo.html
+++ b/SaoPaulo.html
@@ -11,15 +11,15 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="/FutResults/Inicial.css" />
+		<link rel="stylesheet" href="/Inicial.css" />
 	</head>
 	<body>
 		<nav
 			class="navbar navbar-light navbar-expand-lg"
 			style="background-color:red"
 		>
-			<a class="navbar-brand" href="/FutResults/PaginaInicial.html">
-				<img src="/FutResults/Imagens/bola.png" width="50" height="50" />
+			<a class="navbar-brand" href="/index.html">
+				<img src="/Imagens/bola.png" width="50" height="50" />
 				FutResults
 			</a>
 		</nav>
@@ -30,23 +30,23 @@
 				<br />
 				<div>
 					<abbr title="Ceará">CEA</abbr>
-					<img src="/FutResults/Imagens/Ceara.png" width="30" />
+					<img src="/Imagens/Ceara.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;1&emsp;</p>
-					<img src="/FutResults/Imagens/Sao Paulo.png" width="30" />
+					<img src="/Imagens/Sao Paulo.png" width="30" />
 					<abbr title="São Paulo">SAO</abbr><br />
 				</div>
 				<div>
 					<abbr title="São Paulo">SAO</abbr>
-					<img src="/FutResults/Imagens/Sao Paulo.png" width="30" />
+					<img src="/Imagens/Sao Paulo.png" width="30" />
 					<p class="time">&emsp;1&emsp;X&emsp;0&emsp;</p>
-					<img src="/FutResults/Imagens/Vasco.png" width="30" />
+					<img src="/Imagens/Vasco.png" width="30" />
 					<abbr title="Vasco">VAS</abbr><br />
 				</div>
 				<div>
 					<abbr title="Grêmio">GRE</abbr>
-					<img src="/FutResults/Imagens/gremio.png" width="30" />
+					<img src="/Imagens/gremio.png" width="30" />
 					<p class="time">&emsp;3&emsp;X&emsp;0&emsp;</p>
-					<img src="/FutResults/Imagens/Sao Paulo.png" width="30" />
+					<img src="/Imagens/Sao Paulo.png" width="30" />
 					<abbr title="São Paulo">SAO</abbr><br />
 				</div>
 			</div>
@@ -56,16 +56,16 @@
 				<br />
 				<div>
 					<abbr title="São Paulo">SAO</abbr>
-					<img src="/FutResults/Imagens/Sao Paulo.png" width="30" />
+					<img src="/Imagens/Sao Paulo.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Internacional.png" width="30" />
+					<img src="/Imagens/Internacional.png" width="30" />
 					<abbr title="Internacional">INT</abbr><br />
 				</div>
 				<div>
 					<abbr title="CSA">CSA</abbr>
-					<img src="/FutResults/Imagens/csa.png" width="30" />
+					<img src="/Imagens/csa.png" width="30" />
 					<p class="time">&emsp;&emsp;X&emsp;&emsp;</p>
-					<img src="/FutResults/Imagens/Sao Paulo.png" width="30" />
+					<img src="/Imagens/Sao Paulo.png" width="30" />
 					<abbr title="São Paulo">SAO</abbr><br />
 				</div>
 			</div>
